tests/tests/Other_tests/tests-Init-20-Array-20-09_Array_AccessingOutOfBounds2/pld-compile.txt
Error in input.c.
Error Index out of bounds : 3. On position 13:5
   "	a = array[3];"
         ^

1 error generated.

return code: 1
